kustomizations/media/immich/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
spec:
  replicas: 0
  selector:
    matchLabels:
      app: immich
      app.kubernetes.io/name: immich
  template:
    metadata:
      labels:
        app: immich
        app.kubernetes.io/name: immich
      annotations:
        app.kubernetes.io/documentation: "https://github.com/immich-app/immich/tree/main/deployment"
    spec:
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:release
        ports:
        - containerPort: 2283
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 2          
            memory: 4Gi
        securityContext:
          privileged: true 
        volumeMounts:
        - mountPath: /dev/dri
          name: dri
        - name: immich-data
          mountPath: /data
      nodeSelector:
        kubernetes.io/hostname: catimore
      securityContext:
        fsGroup: 1000
        supplementalGroups: [44, 107, 992]
      volumes:
      - name: dri
        hostPath:
          path: /dev/dri
      - name: immich-data
        hostPath:
          path: /media/memories
          type: DirectoryOrCreate
