kustomizations/media/immich/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
spec:
  selector:
    app: immich-valkey
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
