kustomizations/media/immich/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  labels:
    app.kubernetes.io/name: immich-postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: immich-postgresql
