kustomizations/media/immich/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  labels:
    app.kubernetes.io/name: immich
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: immich
  ports:
  - name: http
    protocol: TCP
    port: 2283
    targetPort: 2283
