kustomizations/media/immich/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: photos.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: immich
              port:
                number: 2283
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-local
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: photos.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich
            port:
              number: 2283
